2014-04-13  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in (AC_CHECK_TYPES([off_t])) src/syscfg.h (#define off_t)
	src/binary.c src/datafile.c src/datafile.h:  Change the declared type
	of all variables contributing to calculation of file offsets from (int)
	to (off_t).  This is sufficient to allow seeking in files > 2GB on 64bit
	platforms.  It may also allow LFS support on some 32bit platforms if
	compiled with -D_FILE_OFFSET_BITS=64 but in general it will also be
	necessary to replace fseek/ftell with fseeko/ftello (32bit linux) or
	_fseeki64/_ftelli64 (MSVC).

2014-04-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_binary_details[]): Handle int64 and uint64 types 
	even if current platform has sizeof(long) = 4.
	Bugfix

2014-04-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/save.c (save_linetype) src/misc.c (lp_parse)
	src/graphics.c (plot_lines) src/graph3d.c (do_3dplot plot3d_lines)
	src/boundary.c (do_key_sample):

	New linetype keyword "nodraw" maps to existing internal value LT_NODRAW.
	Apply this in the graphics layer rather than the terminal layer in order
	to distinguish between line properties and point properties.
	I.e. this draws blue points but no lines:
	  plot $FOO with linespoints lt nodraw pointtype 6 lc rgb "blue"

	* src/term.c (term_apply_lp_properties):  Distinguish between l_type
	values that really indicate a linetype (e.g. LT_NODRAW, LT_AXIS) and
	those which indicate a dash pattern. Send the former directly to
	term->linetype(). Send the latter to term->dashtype(), which may itself
	call term->linetype() if there is no private implementation of dashes.

2014-04-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (null_dashtype):  Ignore custom dashtypes. Pass through
	dashtypes > 0 to term->linetype(). Treat negative dashtypes as LT_BLACK.
	This should allow terminals without a private dashtype implementation to
	continue working as they did before (pre-version 5).
